# pyopus-smarthome

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: .env.example  example_connect.py  stream_listen.py
src/pyopus_smarthome/: __init__.py  auth.py  cli.py  client.py  exceptions.py  models.py  stream.py
tests/: conftest.py  test_auth.py  test_client.py  test_models.py  test_stream.py
